--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,7 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;500;600;700&display=swap');
+* {
+    font-family: 'Fira Sans', sans-serif !important;
+    letter-spacing: 0.5px;
     box-sizing: border-box;
 }
 a {
