--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-light navbar-expand-lg">
     <div class="container">
-        <a class="navbar-brand" href="#"><img src="assets/img/logo.png" style="width: 200px;"></a>
+        <a class="navbar-brand" href="index.php"><img src="assets/img/logo.png" style="width: 200px;"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
