--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -17,7 +17,7 @@
                         Articoli
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="index.php#cura-della-pelle">Cura della pelle</a></li>
+                        <li><a class="dropdown-item" href="article.php?name=cura-della-pelle">Cura della pelle</a></li>
                         <li><a class="dropdown-item" href="#">Another action</a></li>
                         <li>
                             <hr class="dropdown-divider">
