--- a/assets/style.css
+++ b/assets/style.css
@@ -10,8 +10,8 @@ a {
 header {
     background: url("img/cover-2.jpg") fixed;
     background-size: cover;
-    background-position: right -25vh;
-    height: 45vh;
+    background-position: right -30vh;
+    height: 50vh;
 }
 @media screen and (max-width: 600px){
     header{
@@ -30,7 +30,9 @@ header strong{
     opacity: 0.7;
 }
 .article img{
-    padding: 12%;
+    padding: 10%;
+    padding-left: 20%;
+    padding-right: 20%;
 }
 
 
