Messo tutto e cambiato titolo a un capitolo. mancano solo piccole modifiche

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -22,7 +22,7 @@
                         <li><a class="dropdown-item" href="article.php?name=ausili">Ausili</a></li>
                         <li><a class="dropdown-item" href="article.php?name=postura-e-trasferimenti">Postura e trasferimenti</a></li>
                         <li><a class="dropdown-item" href="article.php?name=esercizio-fisico">Esercizio fisico</a></li>
-                        <li><a class="dropdown-item" href="article.php?name=problemi-associati">Problemi associati</a></li>
+                        <li><a class="dropdown-item" href="article.php?name=complicanze-associate">Complicanze associate</a></li>
                         <li><a class="dropdown-item" href="article.php?name=nutrizione">Nutrizione</a></li>
                         <li><a class="dropdown-item" href="article.php?name=abbigliamento">Abbigliamento</a></li>
                         <li><a class="dropdown-item" href="article.php?name=sessualità">Sessualità</a></li>
