--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -23,12 +23,13 @@
                         <li><a class="dropdown-item" href="article.php?name=postura-e-trasferimenti">Postura e trasferimenti</a></li>
                         <li><a class="dropdown-item" href="article.php?name=esercizio-fisico">Esercizio fisico</a></li>
                         <li><a class="dropdown-item" href="article.php?name=complicanze-associate">Complicanze associate</a></li>
-                        <li><a class="dropdown-item" href="article.php?name=nutrizione">Nutrizione</a></li>
-                        <li><a class="dropdown-item" href="article.php?name=abbigliamento">Abbigliamento</a></li>
-                        <li><a class="dropdown-item" href="article.php?name=sessualità">Sessualità</a></li>
+                        <li><a class="dropdown-item disabled" href="article.php?name=nutrizione">Nutrizione</a></li>
+                        <li><a class="dropdown-item disabled" href="article.php?name=abbigliamento">Abbigliamento</a></li>
+                        <li><a class="dropdown-item disabled" href="article.php?name=sessualità">Sessualità</a></li>
                         <li><a class="dropdown-item disabled" href="article.php?name=vescica-e-intestino">Vescica e intestino</a></li>
-                        <li><a class="dropdown-item" href="article.php?name=gestione-della-casa">Gestione della casa</a></li>
+                        <li><a class="dropdown-item disabled" href="article.php?name=gestione-della-casa">Gestione della casa</a></li>
                         <li><a class="dropdown-item disabled" href="article.php?name=sistema-respiratorio">Sistema respiratorio</a></li>
+                        <li><a class="dropdown-item disabled" href="article.php?name=sport">Sport</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
