--- a/assets/style.css
+++ b/assets/style.css
@@ -21,7 +21,7 @@ header {
 header strong{
     font-size: 120%;
 }
-.article{
+.article, .article-disabled{
     margin-top: 2rem !important;
     transition: 0.2s; 
 }
@@ -29,7 +29,7 @@ header strong{
     cursor: pointer;
     opacity: 0.7;
 }
-.article img{
+.article img, .article-disabled img{
     padding: 10%;
     padding-left: 20%;
     padding-right: 20%;
