--- a/assets/article.css
+++ b/assets/article.css
@@ -31,6 +31,11 @@ p, li{
 #index {
     margin: 1rem 0;
 }
+@media screen and (min-width: 992px){
+    #index{
+        max-width: 70%;
+    }
+}
 
 .banner{
     border: 2px solid #0097ff;
@@ -62,15 +67,15 @@ p, li{
     margin: 6px auto;
     padding: 0;
 }
-
 .framed{
     border: 1px solid rgba(0,0,0,.125);
 }
-
 .watermark{
     position: absolute;
     right: 0;
     z-index: 1;
-    width: 40%;
+    width: 35%;
+    margin-top: -10%;
+    margin-right: -5%;
     opacity: 0.4;
 }
