--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -33,13 +33,9 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a id="contats" class="nav-link" href="#">Contatti</a>
+                    <a id="contats" class="nav-link disabled" href="#">Contatti</a>
                 </li>
             </ul>
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search">
-                <button class="btn btn-outline-primary" type="submit">Search</button>
-            </form>
         </div>
     </div>
 </nav>
