--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -30,6 +30,7 @@
                         <li><a class="dropdown-item disabled" href="article.php?name=gestione-della-casa">Gestione della casa</a></li>
                         <li><a class="dropdown-item disabled" href="article.php?name=sistema-respiratorio">Sistema respiratorio</a></li>
                         <li><a class="dropdown-item disabled" href="article.php?name=sport">Sport</a></li>
+                        <li><a class="dropdown-item disabled" href="article.php?name=benessere-psicologico">Benessere psicologico</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
